
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_port; int sin_family; TYPE_1__ sin_addr; } ;
struct sockaddr {int dummy; } ;
typedef int server ;


 int AF_INET ;
 unsigned short DEFAULT_PORT ;
 int DEFAULT_PROTO ;
 scalar_t__ SOCKET_ERROR ;
 int Usage () ;
 int WSACleanup () ;
 int WSAGetLastError () ;
 int WSAStartup (int,int *) ;
 unsigned short atoi (char*) ;
 int closesocket (scalar_t__) ;
 scalar_t__ conn_socket ;
 scalar_t__ connect (scalar_t__,struct sockaddr*,int) ;
 int fprintf (int ,char*,int) ;
 int htons (unsigned short) ;
 int inet_addr (char*) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int recvdata () ;
 int senddata () ;
 scalar_t__ socket (int ,int,int ) ;
 int stderr ;
 int wsaData ;

int main(int argc, char *argv[])
{


 char *server_name= "localhost";
 unsigned short port = DEFAULT_PORT;
 int i, loopcount, maxloop=-1;
 int retval;
 unsigned int addr;
 int socket_type = DEFAULT_PROTO;
 struct sockaddr_in server;

 if (argc < 3) {
  Usage();
 }

 if ((retval = WSAStartup(0x202, &wsaData)) != 0)
 {
    fprintf(stderr,"WSAStartup() failed with error %d\n", retval);
  WSACleanup();
  return -1;
 }


 port = atoi(argv[2]);

 memset(&server, 0, sizeof(server));
 server.sin_addr.s_addr = inet_addr(argv[1]);
 server.sin_family = AF_INET;
 server.sin_port = htons(port);

 conn_socket = socket(AF_INET, socket_type, 0);
 if (conn_socket <0 )
 {
  fprintf(stderr,"Client: Error Opening socket: Error %d\n", WSAGetLastError());
  WSACleanup();
  return -1;
 }

 if (connect(conn_socket, (struct sockaddr*)&server, sizeof(server)) == SOCKET_ERROR)
 {
  fprintf(stderr,"Client: connect() failed: %d\n", WSAGetLastError());
  WSACleanup();
  return -1;
 }


 senddata();


 recvdata();

 closesocket(conn_socket);
 WSACleanup();

return 0;
}
